<resources>

    <string name="app_name">Kuliner Jogja</string>
    <string name="kuliner_jogja">KULINER JOGJA</string>
    <string name="login">Login</string>
    <string name="tambah_lokasi">Tambah Lokasi Kuliner</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="telp">Telp</string>
    <string name="harga">Harga</string>
    <string name="jam_buka">Jam Buka</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="pilih_foto">Pilih Foto</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="batal">Batal</string>
    <string name="kuliner_terdekat2">Kuliner yang terdekat dengan anda :</string>
    <string name="_100">&#8226; 100 m</string>
    <string name="_200">&#8226; 200 m</string>
    <string name="_300">&#8226; 300 m</string>
    <string name="detail_kuliner">Detail Kuliner</string>
    <string name="ke_lokasi">Ke Lokasi</string>
    <string name="bagikan">Bagikan</string>
    
    <string name="submit_rating">Submit Rating</string>
    <string name="pencarian_kuliner">Pencarian Kuliner</string>
    <string name="kuliner_terdekat">Kuliner Terdekat</string>
    <string name="rating_kuliner">Rating Kuliner</string>
    <string name="tambah_kuliner">Tambah Kuliner</string>
    <string name="kategori_kuliner">Kategori Kuliner</string>
    <string name="daftar_member">Daftar Member</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="jenis_kelamin">jenis kelamin</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="daftar">Daftar</string>
    <string name="nusantara">Nusantara</string>
    <string name="asia">Asia</string>
    <string name="lainnya">Lainnya</string>
    <string name="cari_makanan_lbl">Tulis nama makanan yang ingin dicari</string>
    <string name="cari_makanan">cari makanan ...</string>
    <string name="foto">Foto</string>
    <string name="ambil_foto">Ambil Foto</string>
    <string name="upload_foto">Upload Foto</string>
</resources>