<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/padding_xlarge"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/kuliner_terdekat"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:text="@string/_100"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:text="@string/_200"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_large"
        android:text="@string/_300"
        android:textSize="@dimen/font_size_medium"
        android:textStyle="bold" />

</LinearLayout>