<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/kuliner_jogja"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_large"
        android:background="@color/blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:gravity="center"
                android:text="@string/daftar_member"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/username"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:id="@+id/username_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:textSize="@dimen/font_size_medium" 
                    android:background="@drawable/bg_field"
                    android:padding="@dimen/padding_medium"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/password"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" 
                    android:background="@drawable/bg_field"
                    android:padding="@dimen/padding_medium"
                    android:layout_weight=".6"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:id="@+id/email_register"
                    android:layout_width="0dp" 
                    android:background="@drawable/bg_field"
                    android:padding="@dimen/padding_medium"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/alamat"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium" />

                <EditText
                    android:id="@+id/address_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" 
                    android:background="@drawable/bg_field"
                    android:padding="@dimen/padding_medium"
                    android:layout_weight=".6"
                    android:gravity="top"
                    android:lines="3"
                    android:textSize="@dimen/font_size_medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_medium"
                android:orientation="horizontal"
                android:weightSum="1" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".4"
                    android:text="@string/jenis_kelamin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_medium" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/padding_medium"
                    android:layout_weight=".6"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/male_radio_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/laki_laki"
                        android:textColor="@color/white"/>

                    <RadioButton
                        android:id="@+id/female_radio_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/perempuan"
                        android:textColor="@color/white" />
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:padding="@dimen/padding_medium"
                android:text="@string/daftar"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>