<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/kuliner_jogja"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_large"
        android:layout_marginBottom="@dimen/padding_xlarge"
        android:background="@color/blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/pencarian_kuliner"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="@string/cari_makanan_lbl"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_medium" />

    <EditText
        android:id="@+id/field_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:background="@drawable/bg_field"
        android:hint="@string/cari_makanan"
        android:padding="@dimen/padding_medium"
        android:textSize="@dimen/font_size_medium" />

    <ListView
        android:id="@+id/listview_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/padding_small"
        android:layout_marginRight="@dimen/padding_small"
        android:cacheColorHint="@android:color/transparent"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/padding_small"
        android:scrollbars="none" >
    </ListView>

    <ProgressBar
        android:id="@+id/progress_search"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/status_koneksi_pencarian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="Gagal load data, ada masalah dengan Koneksi !"
        android:textColor="@color/red"
        android:textSize="@dimen/font_size_large"
        android:visibility="gone" />

</LinearLayout>