<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:gravity="center"
        android:padding="@dimen/padding_small"
        android:text="@string/kuliner_jogja"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_large"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_large"
        android:background="@color/blue" />

    <ScrollView
        android:id="@+id/scroll_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_xlarge"
                android:layout_marginTop="@dimen/padding_large"
                android:text="@string/detail_kuliner"
                android:textColor="@color/white"
                android:textSize="@dimen/font_size_large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/padding_medium"
                            android:layout_weight="1"
                            android:text="@string/nama"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/nama"
                            android:layout_width="0dp"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/padding_medium"
                            android:layout_weight="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <TextView
                            android:layout_width="0dp"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/padding_medium"
                            android:layout_weight="1"
                            android:text="@string/alamat" />

                        <TextView
                            android:id="@+id/alamat"
                            android:layout_width="0dp"
                            android:textColor="@color/white"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/padding_medium"
                            android:layout_weight="1" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                            android:textColor="@color/white"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:text="@string/deskripsi" />

                <TextView
                    android:id="@+id/deskripsi"
                    android:layout_width="0dp"
                            android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                            android:textColor="@color/white"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:text="@string/telp" />

                <TextView
                    android:id="@+id/telp"
                    android:layout_width="0dp"
                            android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                            android:textColor="@color/white"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:text="@string/harga" />

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                            android:textColor="@color/white"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                            android:textColor="@color/white"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="1"
                    android:text="@string/jam_buka" />

                <TextView
                    android:id="@+id/jam"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                            android:textColor="@color/white"
                    android:layout_margin="@dimen/padding_medium"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3" >

                <Button
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                            android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/telp" 
                    android:background="@drawable/bg_button"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                            android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/ke_lokasi" 
                    android:background="@drawable/bg_button"/>

                <Button
                    android:layout_width="0dp"
                            android:textColor="@color/white"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_small"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/bagikan"
                    android:background="@drawable/bg_button"/>
            </LinearLayout>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:numStars="5"
                android:rating="2.5"
                android:stepSize="1.0" />
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:visibility="gone" />

    <TextView
        android:id="@+id/status_koneksi_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/padding_medium"
        android:layout_marginRight="@dimen/padding_medium"
        android:text="Gagal load data, ada masalah dengna Koneksi !"
        android:textColor="@color/red"
        android:textSize="@dimen/font_size_large"
        android:visibility="gone" />

</LinearLayout>